--- a/app/views/draft_picks/new.html.erb
+++ b/app/views/draft_picks/new.html.erb
@@ -1,13 +1,13 @@
-<% @page_title = "Create Team"%>
+<% @page_title = "Create Pick"%>
 <%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
 
-<div class="team new">
-  <h2>Create Team</h2>
+<div class="pick new">
+  <h2>Create Pick</h2>
 
-  <%= form_for(:team, :url => {:action => 'create'}) do |f| %>
+  <%= form_for(:draft_pick, :url => {:action => 'create'}) do |f| %>
   <%= render(:partial => 'form',:locals => {:f => f})%>      
     <div class="form-buttons">
-      <%= submit_tag("Create Team") %>
+      <%= submit_tag("Create Pick") %>
     </div>
     
   <% end %>
