--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>MarchMadness | <%= @page_title || 'Owner Area' %></title>
     <meta name="author" content="Albert Chiu">
+      <%= stylesheet_link_tag('public','admin',:media => 'all') %>
   </head>
   <body>
     <div id="header">
