--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -1,4 +1,4 @@
-
+<% @page_title = "Delete Owner"%>
 <%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
 
 <div class="user delete">
