--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,30 +1,13 @@
-
+<% @page_title = "Edit Owner"%>
 <%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
 
-<div class="owner edit">
+<div class="user edit">
   <h2>Update Owner</h2>
 
   <%= form_for(:user, :url => {:action => 'update', :id =>@user.id}) do |f| %>
   
-    <table summary="User form fields">
-      <tr>
-        <th>First name</th>
-        <td><%= f.text_field(:first_name) %></td>
-      </tr>
-      <tr>
-        <th>Last name</th>
-        <td><%= f.text_field(:last_name) %></td>
-      </tr>
-      <tr>
-        <th>Email</th>
-        <td><%= f.text_field(:email) %></td>
-      </tr>
-	  <tr>
-        <th>Squad name</th>
-        <td><%= f.text_field(:password) %></td>
-      </tr>
-    </table>
-    
+  <%= render(:partial => 'form', :locals => {:f => f})%>    
+  
     <div class="form-buttons">
       <%= submit_tag("Update Owner") %>
     </div>
